[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/Boss/Apostle/Apostle.png" type="Texture" id=1]
[ext_resource path="res://scripts/FalseApostle.gd" type="Script" id=2]
[ext_resource path="res://sound/fx/Sound/ApostleSound/ApostleAtk.mp3" type="AudioStream" id=3]
[ext_resource path="res://fonts/CONSOLA.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://sound/fx/Sound/ApostleSound/ApostleWalk.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51.25, 10.5 )

[sub_resource type="Animation" id=45]
resource_name = "Atk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "dmg_atk"
}, {
"args": [  ],
"method": "wait_atk_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("FX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=43]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=44]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=46]
resource_name = "Run"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 23 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("FX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=41]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.372549, 0.811765, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.568627, 0.258824, 0.227451, 1 )

[sub_resource type="DynamicFont" id=42]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 69.5, 74 )

[node name="Apostle" type="KinematicBody2D"]
position = Vector2( 0, -8 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.09375, -0.656494 )
shape = SubResource( 1 )

[node name="BossMain" type="Sprite" parent="."]
position = Vector2( 24.3438, -130.656 )
scale = Vector2( 3.21875, 3.21875 )
texture = ExtResource( 1 )
hframes = 24
frame = 1
region_rect = Rect2( 7, 13, 765.702, 155.173 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Atk = SubResource( 45 )
anims/Idle = SubResource( 43 )
anims/RESET = SubResource( 44 )
anims/Run = SubResource( 46 )

[node name="HP" type="ProgressBar" parent="."]
margin_left = -46.0
margin_top = 21.0
margin_right = 49.0001
margin_bottom = 38.0
custom_fonts/font = SubResource( 41 )
custom_styles/fg = SubResource( 31 )
custom_styles/bg = SubResource( 30 )
max_value = 200.0
value = 200.0

[node name="BossName" type="RichTextLabel" parent="."]
margin_left = -81.0
margin_top = 44.9999
margin_right = 57.0001
margin_bottom = 61.9999
rect_min_size = Vector2( 150, 20 )
rect_scale = Vector2( 1.24572, 1.24572 )
custom_fonts/normal_font = SubResource( 42 )
bbcode_enabled = true
bbcode_text = "[center]The False Apostle"
text = "The False Apostle"
scroll_active = false

[node name="AtkArea" type="Area2D" parent="."]
position = Vector2( 0.34375, 0.343506 )
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="AtkAreaShape" type="CollisionShape2D" parent="AtkArea"]
position = Vector2( -69.8438, -0.343506 )
shape = SubResource( 47 )

[node name="FX" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0

[connection signal="body_entered" from="AtkArea" to="." method="_on_AtkArea_body_entered"]
[connection signal="body_exited" from="AtkArea" to="." method="_on_AtkArea_body_exited"]
